--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 # Cloudflare Workers 配置文件
-# GLM-5 部署配置
+# NVIDIA NIM API 通用代理
 
-name = "glm5-api"
+name = "nvidia-nim-proxy"
 main = "src/index.ts"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
@@ -20,11 +20,11 @@ local_protocol = "http"
 
 # 生产环境配置
 [env.production]
-name = "glm5-api-prod"
+name = "nvidia-nim-proxy-prod"
 
 # 预发环境配置
 [env.staging]
-name = "glm5-api-staging"
+name = "nvidia-nim-proxy-staging"
 
 # 限制配置
 [limits]
@@ -43,7 +43,7 @@ cpu_ms = 50000  # CPU 时间限制 (毫秒)
 # D1 数据库绑定 (可选)
 # [[d1_databases]]
 # binding = "DB"
-# database_name = "glm5-db"
+# database_name = "nvidia-nim-db"
 # database_id = "your_database_id"
 
 # 机密环境变量 (通过 wrangler secret put 设置)
